# modullum

./: .gitignore  CLAUDE.md  README copy.md  README.md  pyproject.toml  structure-for-repo.md
agents/: __init__.py  head.py
core/: TODO_requirements_degeneration_check.py  __init__.py  terminal.py  workspace.py
core/archived bits/: TODO_json_salvage.py
documentation/: 2026-03-16-logging-overhaul.md  models.md  state-document.md
documentation/claude-code-sessions/: 2026-03-18-research-module-prototype.md  2026-03-18.md
documentation/conceptual/: 2026-03-18-research-integration.md  2026-03-22-project-scoping.md  2026-03-29-context-architecture.md  2026-03-29-sequencing-workflow.md  2026-04-06-events-architecture.md  memory-system.md
documentation/research-and-development/: modullum-research-2026-04-03.md
modullum/: config.py  main.py
modullum/agents/: head.py
modullum/core/: __init__.py  nodes.py  pane_display.py  stopwatch.py  stream_display.py  terminal.py  workspace.py
modullum/modules/: __init__.py  code_gen.py  requirements_gen.py  scope_manager.py
modullum/runs/: version_record.csv
modullum/runs/run 2/outputs/: requirements.txt
modullum/settings/: defaults.yaml  user.yaml
modullum/tools/: __init__.py
