[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modullum"
version = "0.1.0"
description = "Agentic node-based modular task execution pipeline"
requires-python = ">=3.11"
dependencies = [
    "ollama",
    "pydantic>=2.0",
    "prompt_toolkit",
    "pytest",
    "rich",
]

[project.scripts]
modullum = "modullum.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["modullum*"]